# Fastapi-blog

./: auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: c3ba10201f1e_add_likes_to_posts.py  c51c849f0b9b_initial_schema.py
routers/: posts.py  users.py
static/js/: utils.js
templates/: account.html  home.html  user_posts.html
templates/email/: password_reset.html
tests/: conftest.py  test_posts.py  test_users.py
