[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.137.2",
    "greenlet>=3.5.2",
    "pillow>=12.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]
